Added obfuscation questions

--- a/lectures/03-python-and-programming-fundamentals/00-python-intro-scaffold.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/00-python-intro-scaffold.ipynb
@@ -607,6 +607,30 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "IhVg7mInnDuk"
+      },
+      "source": [
+        "### Obfuscation\n",
+        "Solve the problem described in this text.\n",
+        "\n",
+        "> Oh no, somaona hes dona somathing tarribla to my writing. Thay'va sweppad eround tha lattar 'e' end tha lattar 'a'\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fI2wrdtWnMZ5"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "pVufceYcpugu"
       },
       "source": [
@@ -1690,6 +1714,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "HPEBS58xnYI4"
+      },
+      "source": [
+        "### Obfuscation\n",
+        "Is there another way to solve this problem?\n",
+        "\n",
+        "> Oh no, somaona hes dona somathing tarribla to my writing. Thay'va sweppad eround tha lattar 'e' end tha lattar 'a'"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Dsm5N-CGLh7S"
       },
       "source": [
@@ -2642,6 +2678,29 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "QUZ92cv8nvsp"
+      },
+      "source": [
+        "#### Obfuscation\n",
+        "Is there another way to solve this problem?\n",
+        "\n",
+        "> Oh no, somaona hes dona somathing tarribla to my writing. Thay'va sweppad eround tha lattar 'e' end tha lattar 'a'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WsIgYPzan2vi"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "EqBIuOzqXDzR"
       },
       "source": [
@@ -2773,6 +2832,17 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dshwJXJennss"
+      },
+      "source": [
+        "## Sets\n",
+        "\n",
+        "TODO"
+      ]
     },
     {
       "cell_type": "markdown",
