added Tuples question

--- a/lectures/03-python-and-programming-fundamentals/00-python-intro-scaffold.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/00-python-intro-scaffold.ipynb
@@ -2819,7 +2819,19 @@
         "id": "sBcTABFaEUcJ"
       },
       "source": [
-        "Can we use a tuple to return several values from a function?"
+        "Can we use a tuple to return several values from a function?\n",
+        "\n",
+        "When visiting a theme park, many rides require you to be a certain height before you can ride them.\n",
+        "\n",
+        "At a specific park there are:\n",
+        "\n",
+        "* Red Riders: 85-105cm tall. They have access to 9 rides.\n",
+        "* Green Riders: 106-131cm tall. They have access to 21 rides.\n",
+        "* Yellow Riders: 132cm and taller. They have access to 27 rides.\n",
+        "\n",
+        "Write a function which takes in the user's height in cm (as a parameter) and returns a string (\"Red Rider\", \"Green Rider\" or \"Yellow Rider\") and the number of rides they have access to.\n",
+        "\n",
+        "Write a function which asks the user for their height and then calls the function, and displays the results."
       ]
     },
     {
