added comments section

--- a/lectures/03-python-and-programming-fundamentals/00-python-intro-scaffold.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/00-python-intro-scaffold.ipynb
@@ -306,6 +306,34 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "VVcWvNsW0FM5"
+      },
+      "source": [
+        "## Comments\n",
+        "\n",
+        "* Ignored by the computer\n",
+        "* Start with a `#`\n",
+        "* Used to help programmers read and understand their code (and make notes for themselves to come back and do things later)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SSMZ3kJo0aKI"
+      },
+      "source": [
+        "This is not a comment\n",
+        "# this is a comment\n",
+        "x=0\n",
+        "#x+=1\n",
+        "print(x)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "vOBvioy3WDO_"
       },
       "source": [
