--- a/lectures/03-python-and-programming-fundamentals/scaffold/04-collections.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/04-collections.ipynb
@@ -6,7 +6,7 @@
       "name": "04-collections.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMuLStC9kjrAS8wJtKnTqbb",
+      "authorship_tag": "ABX9TyMJBltwoYcyoWC/kcwPUCjM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -749,6 +749,15 @@
         "* ordered\n",
         "* unchangeable\n",
         "* allows duplicates"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "me3_0Y_iJ2ml"
+      },
+      "source": [
+        "In Python, Tuples are like lists, with on key difference. They are immutable. That means they cannot be changed after they have been created. In this way, they are similar to strings. They are created (defined) using the () (rather than [ ] like in lists and { } like in dictionaries)."
       ]
     },
     {
