updated 3.1.6 to include a table of data types

--- a/lectures/03-python-and-programming-fundamentals/scaffold/01-first-concepts.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/01-first-concepts.ipynb
@@ -6,7 +6,7 @@
       "name": "01-first-concepts.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMHDbIPWcd1CWbbiyfmzm6l",
+      "authorship_tag": "ABX9TyP7rWV6Verl6xiH2KpE7Je6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -908,7 +908,7 @@
         "id": "oFgEchGk0inf"
       },
       "source": [
-        "Make some variables and display their types."
+        "Given a variable can we find out it's data type?"
       ]
     },
     {
@@ -1007,6 +1007,32 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "lHezovahucUF"
+      },
+      "source": [
+        "Fill in the following summary of data types:\n",
+        "\n",
+        "\n",
+        "| Data Type | Declaration Examples | Printing Examples |\n",
+        "|---|---|---|\n",
+        "| | |\n",
+        "| | |\n",
+        "| | |\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aTFCzqGnuAGB"
+      },
+      "source": [
+        "# 7 - F-Strings"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "IilEe6SRSsY4"
       },
       "source": [
@@ -1016,10 +1042,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "WJnJ8M7GuGs6"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "TKpGsue7Mi2z"
       },
       "source": [
-        "# 7 - Modulo Operator\n",
+        "# 8 - Modulo Operator\n",
         "\n",
         "So far we have covered +, -, *, / with integers.\n",
         "\n",
