add entry for NoneType into Data Types table from 3.1.6

--- a/lectures/03-python-and-programming-fundamentals/scaffold/06-further-topics.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/06-further-topics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "06-further-topics.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM5oREYgCHoNujbz3+GfAIP",
+      "authorship_tag": "ABX9TyOeMTfCn+Wg47or5SsUEPoV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,9 +48,9 @@
         "id": "E_NZ3hENDnVP"
       },
       "source": [
-        "# 1 - Data Types: None\n",
+        "# 1 - Data Types: NoneType\n",
         "\n",
-        "None is a special value in Python we can use to represent values that are unknown.\n",
+        "`None` is a special value in Python we can use to represent values that are unknown.\n",
         "\n",
         "**Important Info**:\n",
         "\n",
@@ -77,6 +77,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y27MaZHDvUF_"
+      },
+      "source": [
+        "Copy the table from topic 3.1.6: Data Types here, and fill in an extra row for the `NoneType` data type."
+      ]
     },
     {
       "cell_type": "markdown",
