fixed table layout in 3.1.6

--- a/lectures/03-python-and-programming-fundamentals/scaffold/01-first-concepts.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/01-first-concepts.ipynb
@@ -6,7 +6,7 @@
       "name": "01-first-concepts.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP7rWV6Verl6xiH2KpE7Je6",
+      "authorship_tag": "ABX9TyPwwcSpOEW7uD4TsJWND4o2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1013,11 +1013,11 @@
         "Fill in the following summary of data types:\n",
         "\n",
         "\n",
-        "| Data Type | Declaration Examples | Printing Examples |\n",
-        "|---|---|---|\n",
-        "| | |\n",
-        "| | |\n",
-        "| | |\n",
+        "Data Type | Declaration Examples | Printing Examples\n",
+        "---|---|---\n",
+        " | |\n",
+        " | |\n",
+        " | |\n",
         "\n"
       ]
     },
