improved datetime section including distance between two dates and getting dates into the future

--- a/lectures/03-python-and-programming-fundamentals/scaffold/05-modules-and-libraries.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/05-modules-and-libraries.ipynb
@@ -6,7 +6,7 @@
       "name": "05-modules-and-libraries.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNSD/5fOtFwgFDN5ztl45OT",
+      "authorship_tag": "ABX9TyNfO8HMNu/wkFF56CTdpBdR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,15 @@
       },
       "source": [
         "## 1 - Datetime"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tyJrTtUKLgTa"
+      },
+      "source": [
+        "This section also includes a lot of subtleties about passing parameters into functions."
       ]
     },
     {
@@ -151,6 +160,117 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y9JrjbQbFZXf"
+      },
+      "source": [
+        "As well as `datetime`, there is `date` and `time` if we are only storing the date part or the time part and we don't need the two together."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XtgVhF6sEV0u"
+      },
+      "source": [
+        "Can we find the difference between 2 dates?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JVWa0bgoFnHQ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1wVF-pCCGJ5r"
+      },
+      "source": [
+        "A timedelta object represents a duration, the difference between two dates or times.\n",
+        "\n",
+        "`class datetime.timedelta(days=0, seconds=0, microseconds=0, milliseconds=0, minutes=0, hours=0, weeks=0)`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3ScDMDwcFyN2"
+      },
+      "source": [
+        "Can we find the date 10 days after a given date?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CDarv3smF1Fj"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "X6KW49r-GhIk"
+      },
+      "source": [
+        "And 5 mintues later?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LPi-oj74GiwL"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7LlYolIBHbA1"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1fk8o13cHRmm"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cHzVlf4iEQB6"
+      },
+      "source": [
+        "For further information, specifically managing different timezones: https://docs.python.org/3/library/datetime.html"
+      ]
     },
     {
       "cell_type": "markdown",
