Improved "42nd character" question

--- a/tutes-and-labs/02-lab.ipynb
+++ b/tutes-and-labs/02-lab.ipynb
@@ -130,7 +130,7 @@
         "id": "z426iOSDEbeq"
       },
       "source": [
-        "Write python code in the cells provided to answer the following questions."
+        "**Write python code in the cells provided to answer the following questions.**"
       ]
     },
     {
@@ -139,7 +139,7 @@
         "id": "kSEPwh9MEbeq"
       },
       "source": [
-        "What is the 42nd character (according to programmers)?"
+        "You are asked to find the 42nd character in this string. You think to yourself, \"There are two possible interpretations to this question.\""
       ]
     },
     {
@@ -148,10 +148,39 @@
         "id": "ZFH0ipiQEbeq"
       },
       "source": [
-        ""
+        "# Interpretation 1"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v4m7iEMo4IOg"
+      },
+      "source": [
+        "# Interpretation 2"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U7UAICH24Jbi"
+      },
+      "source": [
+        "Write an explanation why these are two possible correct interpretations to the same question."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ve5lsw0M4O7x"
+      },
+      "source": [
+        ""
+      ]
     },
     {
       "cell_type": "markdown",
