added feedback link

--- a/lectures/03-python-and-programming-fundamentals/scaffold/01-first-concepts.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/01-first-concepts.ipynb
@@ -6,7 +6,7 @@
       "name": "01-first-concepts.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPwwcSpOEW7uD4TsJWND4o2",
+      "authorship_tag": "ABX9TyNw1ZqVhZ6WT7FsnvActPnr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1071,6 +1071,19 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cNUAUvZn5LSP"
+      },
+      "source": [
+        "# Feedback (Topic 3.1)\n",
+        "\n",
+        "[https://forms.gle/Uod5Jpr7AJ2z7cHLA](https://forms.gle/Uod5Jpr7AJ2z7cHLA)\n",
+        "\n",
+        "![](https://i.imgur.com/0L50D4L.png)"
+      ]
     }
   ]
 }
