added feedback link

--- a/lectures/03-python-and-programming-fundamentals/scaffold/02-control-flow.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/02-control-flow.ipynb
@@ -6,7 +6,7 @@
       "name": "02-control-flow.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM3rK2ygb/3ytlePhf275my",
+      "authorship_tag": "ABX9TyOg1QDZC9474JR64GvjUBq+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -946,6 +946,19 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gHLgpeGq50Yg"
+      },
+      "source": [
+        "# Feedback (Topic 3.2)\n",
+        "\n",
+        "[https://forms.gle/Uod5Jpr7AJ2z7cHLA](https://forms.gle/Uod5Jpr7AJ2z7cHLA)\n",
+        "\n",
+        "![](https://i.imgur.com/0L50D4L.png)"
+      ]
     }
   ]
 }
