--- a/lectures/03-python-and-programming-fundamentals/scaffold/03-testing-introduction.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/03-testing-introduction.ipynb
@@ -6,7 +6,7 @@
       "name": "03-testing-introduction.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNnyrAT+poi40sBziTKtLRW",
+      "authorship_tag": "ABX9TyNDozRpPIQuLgvEbyXCOJ1B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,6 +197,19 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1JHlGGzR6AF_"
+      },
+      "source": [
+        "# Feedback (Topic 3.3)\n",
+        "\n",
+        "[https://forms.gle/Uod5Jpr7AJ2z7cHLA](https://forms.gle/Uod5Jpr7AJ2z7cHLA)\n",
+        "\n",
+        "![](https://i.imgur.com/0L50D4L.png)"
+      ]
     }
   ]
 }
