added date-to-string and string-to-date

--- a/lectures/03-python-and-programming-fundamentals/scaffold/05-modules-and-libraries.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/05-modules-and-libraries.ipynb
@@ -6,7 +6,7 @@
       "name": "05-modules-and-libraries.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNfO8HMNu/wkFF56CTdpBdR",
+      "authorship_tag": "ABX9TyMQemQkAgQ2zbdTlot4Gkoi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -256,6 +256,46 @@
       "cell_type": "code",
       "metadata": {
         "id": "1fk8o13cHRmm"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VXbJW1E6ITpk"
+      },
+      "source": [
+        "Can we convert it into a string (to save it into a dictionary or file)?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hbkk3IYqIY62"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UmUTBsmOIZUY"
+      },
+      "source": [
+        "Can we convert it back from a string into a datetime object?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W4AH_m6RIaLx"
       },
       "source": [
         ""
