Datetime section has better notes about variety of ways to create timedelta object.

--- a/lectures/03-python-and-programming-fundamentals/scaffold/05-modules-and-libraries.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/05-modules-and-libraries.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "05-modules-and-libraries.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMQemQkAgQ2zbdTlot4Gkoi",
+      "authorship_tag": "ABX9TyPlSiNttdSveTzmOMAkWJ7G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -227,35 +226,26 @@
         "id": "X6KW49r-GhIk"
       },
       "source": [
-        "And 5 mintues later?"
+        "And 5 mintues later?\n",
+        "\n",
+        "\n",
+        "**Useful Notes**\n",
+        "\n",
+        "There are 2 ways we can create a `timedelta` object for 5 minutes:\n",
+        "* `timedelta(0,0,0,0,5)`\n",
+        "* `timedelta(minutes=5)`\n",
+        "\n",
+        "The latter is more readable and concise.\n",
+        "\n",
+        "We can combine a `date` object with a `time` object into a `datetime` object.\n",
+        "\n",
+        "We can create an empty (zeroed) time object using `time()`\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "LPi-oj74GiwL"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7LlYolIBHbA1"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1fk8o13cHRmm"
       },
       "source": [
         ""
