added e-mail analysis question to dictionaries topic

--- a/lectures/03-python-and-programming-fundamentals/scaffold/04-collections.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/04-collections.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "04-collections.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMJBltwoYcyoWC/kcwPUCjM",
+      "authorship_tag": "ABX9TyPXtH63jnzmWDVU4XRZ5VT/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -619,7 +618,8 @@
         "id": "QUZ92cv8nvsp"
       },
       "source": [
-        "#### Obfuscation\n",
+        "Obfuscation\n",
+        "\n",
         "Is there another way to solve this problem?\n",
         "\n",
         "> Oh no, somaona hes dona somathing tarribla to my writing. Thay'va sweppad eround tha lattar 'e' end tha lattar 'a'"
@@ -723,6 +723,95 @@
       "cell_type": "code",
       "metadata": {
         "id": "gnZxPebCD2vs"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q0j70CbVjKhY"
+      },
+      "source": [
+        "### Text Analysis Using Dictionaries: E-mail Example"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iFehM0xKi36H"
+      },
+      "source": [
+        "This list contains the e-mail addresses of 4 different students."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oNTU0_U8jTgi"
+      },
+      "source": [
+        "emails = [\"z1234567@student.unsw.edu.au\", \"z7654321@unsw.edu.au\", \"z7891234@ad.unsw.edu.au\", \"z1357924@student.unsw.edu.au\"]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1skhA71ajJ1C"
+      },
+      "source": [
+        "Can we build a dictionary containing the Zids as keys and the e-mail addresses as values?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LEk-D_rQjbTT"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "blFe2sqUjcRM"
+      },
+      "source": [
+        "How many students prefer each e-mail domain?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8R_2JN1QjeXw"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tkI40jPCjfwA"
+      },
+      "source": [
+        "Can we group students by their preferred e-mail domain?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OAQoSRkGjil0"
       },
       "source": [
         ""
