--- a/lectures/03-python-and-programming-fundamentals/scaffold/05-modules-and-libraries.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/05-modules-and-libraries.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "05-modules-and-libraries.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPlSiNttdSveTzmOMAkWJ7G",
+      "authorship_tag": "ABX9TyOTiOz2wvwtT4nM5ev6CHvw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,7 +197,7 @@
       "source": [
         "A timedelta object represents a duration, the difference between two dates or times.\n",
         "\n",
-        "`class datetime.timedelta(days=0, seconds=0, microseconds=0, milliseconds=0, minutes=0, hours=0, weeks=0)`"
+        "`datetime.timedelta(days=0, seconds=0, microseconds=0, milliseconds=0, minutes=0, hours=0, weeks=0)`"
       ]
     },
     {
@@ -315,6 +315,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Au-2Elod1gTz"
+      },
+      "source": [
+        "* `random.randint(start, stop)` (start and stop are both included in the range)\n",
+        "* `random.choices(sequence, weights=None, cum_weights=None, k=1)`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "yq3sKbWq1YuI"
       },
       "source": [
@@ -345,6 +355,48 @@
       "cell_type": "code",
       "metadata": {
         "id": "S4jaGJ_F1kD8"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ol11Pm580Ip7"
+      },
+      "source": [
+        "Is it possible to flip a weighted coin?\n",
+        "\n",
+        "Imagine we have a coin, in which there is 1/3 chance you'll get 'heads' and 2/3 chance you'll get 'tails'."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0e9URhZR1OmH"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ancPp3sz1Jin"
+      },
+      "source": [
+        "Can we do this 12 times a get a list of the results?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-C9XzRrR1M6B"
       },
       "source": [
         ""
