improved problem statement description

--- a/project/proposal.ipynb
+++ b/project/proposal.ipynb
@@ -48,7 +48,7 @@
         "\n",
         "## Problem statement\n",
         "\n",
-        "*Give a brief description of the problem you are trying to solve. Don't include any technical details. Your description should be understandable to a reader with no technical background or domain knowledge.*\n",
+        "*Give a brief description of the problem you are trying to solve. Don't include any technical details. Don't just describe what your program does. Focus on the purpose of your program. Your description should be understandable to a reader with no technical background or domain knowledge.*\n",
         "\n",
         "## Background\n",
         "\n",
