extra example added at end

--- a/lectures/03-python-and-programming-fundamentals/02-control-flow.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/02-control-flow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "02-control-flow.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOkdbiBlxay+YVogI4JPPqJ",
+      "authorship_tag": "ABX9TyP3QanTIw1uxHBit1hooHpr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1456,10 +1456,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "xc7A6Pp9JApm",
-        "outputId": "60a04553-5eca-43f1-d150-f3854ad38a8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "60a04553-5eca-43f1-d150-f3854ad38a8c"
       },
       "source": [
         "num = input(\"Enter a number: \")\n",
@@ -1493,11 +1493,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cWACzQffBPEE",
-        "outputId": "6172879e-8540-4e80-ce96-f9725469e5b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cWACzQffBPEE",
+        "outputId": "6172879e-8540-4e80-ce96-f9725469e5b4"
       },
       "source": [
         "# Question: What is the +=?\n",
@@ -1527,11 +1527,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TbZ-Oj6tBhvj",
-        "outputId": "e245c45c-52f2-43d7-c19a-40ae8cdbe738",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TbZ-Oj6tBhvj",
+        "outputId": "e245c45c-52f2-43d7-c19a-40ae8cdbe738"
       },
       "source": [
         "# Q: Why did you use f when you print it?\n",
@@ -1570,10 +1570,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "LxAjyoYFDv3z",
-        "outputId": "dbfb4998-ee6b-491b-89b7-1552a2ce38fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dbfb4998-ee6b-491b-89b7-1552a2ce38fa"
       },
       "source": [
         "for i in range(0, 10):\n",
@@ -1612,10 +1612,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "H2AVVV3ZDwKE",
-        "outputId": "9a4b9662-6fb3-4928-f9dc-a289cc7eafd2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9a4b9662-6fb3-4928-f9dc-a289cc7eafd2"
       },
       "source": [
         "# Square Numbers\n",
@@ -1642,11 +1642,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iMh7q-ZCCZqZ",
-        "outputId": "5e15961a-ec6a-43a5-ede4-7497073076bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iMh7q-ZCCZqZ",
+        "outputId": "5e15961a-ec6a-43a5-ede4-7497073076bc"
       },
       "source": [
         "# Triangular Numbers\n",
@@ -1685,11 +1685,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8kBsQRAMD9o3",
-        "outputId": "d491d99a-e27e-474d-d9a6-39e2b1f860b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8kBsQRAMD9o3",
+        "outputId": "d491d99a-e27e-474d-d9a6-39e2b1f860b1"
       },
       "source": [
         "text = \"The quick brown fox.\"\n",
@@ -1715,10 +1715,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ftJ3bHMyOLk-",
-        "outputId": "371d0026-326b-42ae-bcb7-5c2f81e0bdce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "371d0026-326b-42ae-bcb7-5c2f81e0bdce"
       },
       "source": [
         "# Using a counter to access individual elements (while loop or for loop)\n",
@@ -1767,10 +1767,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "jq4lduglOOQt",
-        "outputId": "46a13e54-bc82-4131-c99c-64b25644e467",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "46a13e54-bc82-4131-c99c-64b25644e467"
       },
       "source": [
         "# Using the features of a string as an iterator (for loop)\n",
@@ -1813,11 +1813,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XKcbLsI3FSnP",
-        "outputId": "c42928d3-9f2e-460b-f065-cbe12f63cb15",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XKcbLsI3FSnP",
+        "outputId": "c42928d3-9f2e-460b-f065-cbe12f63cb15"
       },
       "source": [
         "# Print only the lowercase characters\n",
@@ -1868,11 +1868,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q1o7O3DkFn2T",
-        "outputId": "2518993e-afe4-46cc-9736-420911d453ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q1o7O3DkFn2T",
+        "outputId": "2518993e-afe4-46cc-9736-420911d453ef"
       },
       "source": [
         "text = \"Oh no, somaona hes dona somathing tarribla to my writing. Thay'va sweppad eround tha lattar 'e' end tha lattar 'a'\"\n",
@@ -1923,10 +1923,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "uXw-qkGuRAdp",
-        "outputId": "2fe289b8-fbc3-425b-f91c-ed7ee3a631c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2fe289b8-fbc3-425b-f91c-ed7ee3a631c3"
       },
       "source": [
         "print(\"Choose a number between 1 and 100.\")\n",
@@ -2026,10 +2026,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-CsBtFSHgWXm",
-        "outputId": "65608dea-3506-4ea1-cb37-2b4fc34b20aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "65608dea-3506-4ea1-cb37-2b4fc34b20aa"
       },
       "source": [
         "box = ('+'+'-'*5+'+\\n')+('|'+' '*5+'|\\n')*3+('+'+'-'*5+'+\\n')\n",
@@ -2072,10 +2072,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "GwxjSEeygg4m",
-        "outputId": "22cd1133-0727-45a1-c07a-e886ac18da1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "22cd1133-0727-45a1-c07a-e886ac18da1f"
       },
       "source": [
         "# box = ('+'+'-'*5+'+\\n')+('|'+' '*5+'|\\n')*3+('+'+'-'*5+'+\\n')\n",
@@ -2116,11 +2116,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HwJKOJq7I8fM",
-        "outputId": "ed8b3fde-fe55-412b-ae7d-9832711cfeca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HwJKOJq7I8fM",
+        "outputId": "ed8b3fde-fe55-412b-ae7d-9832711cfeca"
       },
       "source": [
         "# box = ('+'+'-'*5+'+\\n')+('|'+' '*5+'|\\n')*3+('+'+'-'*5+'+\\n')\n",
@@ -2170,11 +2170,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VbaBL-nuJe5Q",
-        "outputId": "713ba38a-b0af-4e3f-a855-75c15e7c864e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VbaBL-nuJe5Q",
+        "outputId": "713ba38a-b0af-4e3f-a855-75c15e7c864e"
       },
       "source": [
         "box = get_box_string(5,3)\n",
@@ -2233,11 +2233,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YzAk1mq_QCpn",
-        "outputId": "32949c04-ebe1-4a19-9183-97417d80dfc3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YzAk1mq_QCpn",
+        "outputId": "32949c04-ebe1-4a19-9183-97417d80dfc3"
       },
       "source": [
         "print_box(27,15)"
@@ -2315,11 +2315,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2Cmb-stCMZiK",
-        "outputId": "2c176aa2-e67b-4133-c5d7-347227ccd96b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2Cmb-stCMZiK",
+        "outputId": "2c176aa2-e67b-4133-c5d7-347227ccd96b"
       },
       "source": [
         "print(my_count(\"hello\", 'h'))\n",
@@ -2351,11 +2351,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_1rBGkVDMvEX",
-        "outputId": "49a2bc57-d9af-4b6d-9e48-e528b1646782",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_1rBGkVDMvEX",
+        "outputId": "49a2bc57-d9af-4b6d-9e48-e528b1646782"
       },
       "source": [
         "import string\n",
@@ -2398,11 +2398,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SXk5xxBqNPRb",
-        "outputId": "eea074b4-193a-4630-e76d-2670cc0784a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SXk5xxBqNPRb",
+        "outputId": "eea074b4-193a-4630-e76d-2670cc0784a4"
       },
       "source": [
         "print(count_punctuation_ap1(\"Hello. My name is Sim. There's more interesting... $#&=\"))"
@@ -2477,6 +2477,40 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lnSOzPkuQhI1",
+        "outputId": "a6f71326-70f9-4a10-a943-a4c0841e04c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Q: What if the first indented condition is not met?\n",
+        "\n",
+        "def print_num(num):\n",
+        "    if num == 1:\n",
+        "        print(\"one\")\n",
+        "    elif num == 2:\n",
+        "        print(\"two\")\n",
+        "\n",
+        "print_num(1)\n",
+        "print_num(5)\n",
+        "print_num(2)"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "one\n",
+            "two\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
