Updated Sets section

--- a/lectures/03-python-and-programming-fundamentals/scaffold/04-collections.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/04-collections.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "04-collections.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPXtH63jnzmWDVU4XRZ5VT/",
+      "authorship_tag": "ABX9TyPvrrpd5D3IuF+H88k6kMM0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -884,12 +884,24 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "ZHzbbO4lkdyh"
+      },
+      "source": [
+        "In COMP1010, we are not going to use Tuples in more detail than this. If you are interested in further exploring this topic I recommend:\n",
+        "* [W3Schools Tuples](https://www.w3schools.com/python/python_tuples.asp)\n",
+        "* [Tutorials Point Tuples](https://www.tutorialspoint.com/python/python_tuples.htm)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "dshwJXJennss"
       },
       "source": [
         "# 5 - Sets\n",
         "\n",
-        "TODO"
+        "We aren't going to cover Python Sets in COMP1010. If you are interested in this form of collection, I recommend:\n",
+        "* [W3Schools Sets](https://www.w3schools.com/python/python_sets.asp)"
       ]
     }
   ]
